--- a/environment.yml
+++ b/environment.yml
@@ -11,3 +11,8 @@ dependencies:
   - bioconda::multiqc=1.7
   - conda-forge::r-markdown=1.1
   - conda-forge::r-base=3.6.1
+  - conda-forge::r-dplyr=1.0.0
+  - conda-forge::r-tidyr=1.1.0
+  - conda-forge::r-stringr=1.4.0
+  - conda-forge::r-lubridate=1.7.9
+  - conda-forge::r-readr=1.3.1
