--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ params {
   igenomes_base = "./iGenomes"
   tracedir = "${params.outdir}/pipeline_info"
   awsqueue = false
-  awsregion = 'eu-west-1'
+  awsregion = 'us-west-2'
   igenomesIgnore = false
   custom_config_version = 'master'
   custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
@@ -39,7 +39,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'nfcore/epigen:dev'
+process.container = 'czbiohub/epigen:latest'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
