--- a/environment.yml
+++ b/environment.yml
@@ -16,3 +16,6 @@ dependencies:
   - conda-forge::r-stringr=1.4.0
   - conda-forge::r-lubridate=1.7.9
   - conda-forge::r-readr=1.3.1
+  - conda-forge::r-ape=5.4
+  - conda-forge::r-magrittr=1.5
+  - conda-forge::r-readxl=1.3.1
