--- a/environment.yml
+++ b/environment.yml
@@ -19,3 +19,5 @@ dependencies:
   - conda-forge::r-ape=5.4
   - conda-forge::r-magrittr=1.5
   - conda-forge::r-readxl=1.3.1
+  - conda-forge::r-phytools=0.7_47
+  
