--- a/environment.yml
+++ b/environment.yml
@@ -5,18 +5,21 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - r
 dependencies:
   # TODO nf-core: Add required software dependencies here
   - bioconda::fastqc=0.11.8
   - bioconda::multiqc=1.7
-  - conda-forge::r-markdown=1.1
-  - conda-forge::r-base=3.6.1
-  - conda-forge::r-dplyr=1.0.0
-  - conda-forge::r-tidyr=1.1.0
-  - conda-forge::r-stringr=1.4.0
-  - conda-forge::r-lubridate=1.7.9
-  - conda-forge::r-readr=1.3.1
+  - conda-forge::awscli=1.18.125
   - conda-forge::r-ape=5.4
+  - conda-forge::r-base=3.6.1
+  - conda-forge::r-devtools=2.3.1
+  - conda-forge::r-dplyr=1.0.0
+  - conda-forge::r-lubridate=1.7.9
   - conda-forge::r-magrittr=1.5
-  - conda-forge::r-readxl=1.3.1
+  - conda-forge::r-markdown=1.1
   - conda-forge::r-phytools=0.7_47
+  - conda-forge::r-readr=1.3.1
+  - conda-forge::r-readxl=1.3.1
+  - conda-forge::r-stringr=1.4.0
+  - conda-forge::r-tidyr=1.1.0
