--- a/nextflow.config
+++ b/nextflow.config
@@ -51,6 +51,12 @@ try {
   System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
+aws {
+    accessKey = '$AWS_ACCESS_KEY_ID'
+    secretKey = '$AWS_SECRET_ACCESS_KEY'
+}
+
+
 profiles {
   awsbatch { includeConfig 'conf/awsbatch.config' }
   conda { process.conda = "$baseDir/environment.yml" }
