--- a/conf/test.config
+++ b/conf/test.config
@@ -15,12 +15,10 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   
-  // Input data
-  // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-  // TODO nf-core: Give any required params for the test so that command line flags are not needed
-  singleEnd = false
-  readPaths = [
-    ['Testdata', ['https://github.com/nf-core/test-datasets/raw/exoseq/testdata/Testdata_R1.tiny.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/exoseq/testdata/Testdata_R2.tiny.fastq.gz']],
-    ['SRR389222', ['https://github.com/nf-core/test-datasets/raw/methylseq/testdata/SRR389222_sub1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/methylseq/testdata/SRR389222_sub2.fastq.gz']]
-  ]
+  // Input data california, minnesota
+  // before running test profile run bash bin/download_data_czb.sh if testing with czb data
+  // if not running with czb data replace the following newicks with your own data
+  newicks = "newicks/tree_{california,minnesota}.nwk"
+  gisaid_metadata = "gisaid/metadata.tsv"
+  gisaid_sequences = "gisaid/sequences.fasta"
 }
