test data moved to gh

--- a/conf/test.config
+++ b/conf/test.config
@@ -18,7 +18,10 @@ params {
   // Input data california, minnesota
   // before running test profile run bash bin/download_data_czb.sh if testing with czb data
   // if not running with czb data replace the following newicks with your own data
-  newicks = "newicks/tree_{california,minnesota}.nwk"
-  gisaid_metadata = "gisaid/metadata.tsv"
-  gisaid_sequences = "gisaid/sequences.fasta"
+  newicks = [
+  'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/newicks/tree_california.nwk',
+  'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/newicks/tree_minnesota.nwk'
+  ]
+  gisaid_metadata = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/metadata.tsv'
+  gisaid_sequences = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/sequences_subsampled.tsv'
 }
