--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - pytorch
 dependencies:
   # TODO nf-core: Add required software dependencies here
   - bioconda::fastqc=0.11.8
@@ -20,3 +21,12 @@ dependencies:
   - conda-forge::r-readxl=1.3.1
   - conda-forge::r-stringr=1.4.0
   - conda-forge::r-tidyr=1.1.0
+  - conda-forge::biopython==1.77
+  - conda-forge::numpy==1.19.1
+  - pytorch::torchvision==0.7.0
+  - conda-forge::tqdm==4.48.2
+  - bioconda::augur==10.0.2
+  - pip:
+    - pyro-api==0.1.2
+    - pyro-ppl==1.4.0
+    - torch==1.6.0    
