added extra parameter inputs for seir model

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,11 +10,13 @@ params {
 
   // Workflow flags
   // TODO nf-core: Specify your pipeline's command line flags
-  genome = false
-  reads = "data/*{1,2}.fastq.gz"
-  singleEnd = false
   outdir = './results'
-
+  incubation_time = 5.5
+  recovery_time = 14
+  haar_full_mass = 7
+  population_csv=false
+  num_samples_csv=false
+  
   // Boilerplate options
   name = false
   multiqc_config = "$baseDir/assets/multiqc_config.yaml"
@@ -24,7 +26,6 @@ params {
   plaintext_email = false
   monochrome_logs = false
   help = false
-  igenomes_base = "./iGenomes"
   tracedir = "${params.outdir}/pipeline_info"
   awsqueue = false
   awsregion = 'us-west-2'
