--- a/conf/test.config
+++ b/conf/test.config
@@ -25,5 +25,5 @@ params {
   gisaid_metadata = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/metadata.tsv'
   gisaid_sequences = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/sequences_subsampled.tsv'
   population_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/population.csv'
-  num_samples = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/num_samples.csv'
+  num_samples_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/num_samples.csv'
 }
