fixed test profiles

--- a/conf/test_superspreadingseirmodel.config
+++ b/conf/test_superspreadingseirmodel.config
@@ -26,7 +26,7 @@ params {
   gisaid_sequences = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/sequences_subsampled.tsv'
   population_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/population.csv'
   num_samples_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/num_samples.csv'
-  model_type = SuperspreadingSEIRModel,
+  model_type = "SuperspreadingSEIRModel"
   incubation_time = 5.5
   recovery_time = 14
   haar_full_mass = 7
