--- a/nextflow.config
+++ b/nextflow.config
@@ -58,7 +58,13 @@ profiles {
   debug { process.beforeScript = 'echo $HOSTNAME' }
   docker { docker.enabled = true }
   singularity { singularity.enabled = true }
-  test { includeConfig 'conf/test.config' }
+  test_heterogeneoussirmodel { includeConfig 'conf/test_heterogeneoussirmodel.config' }
+  test_overdispersedseirmodel { includeConfig 'conf/test_overdispersedseirmodel.config' }
+  test_overdispersedsirmodel { includeConfig 'conf/test_overdispersedsirmodel.config'}
+  test_simpleseirdmodel { includeConfig 'conf/test_simpleseirdmodel.config'}
+  test_simplesirmodel { includeConfig 'conf/test_simplesirmodel.config'}
+  test_superspreadingseirmodel { includeConfig 'conf/test_superspreadingseirmodel.config'}
+  test_superspreadingsirmodel { includeConfig 'conf/test_superspreadingsirmodel.config'}  
 }
 
 // Avoid this error:
