--- a/conf/test_heterogeneoussirmodel.config
+++ b/conf/test_heterogeneoussirmodel.config
@@ -26,7 +26,7 @@ params {
   gisaid_sequences = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/sequences_subsampled.tsv'
   population_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/population.csv'
   num_samples_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/num_samples.csv'
-  model_type = HeterogeneousSIRModel,
+  model_type = "HeterogeneousSIRModel"
   recovery_time = 14
   haar_full_mass = 7
 }
