--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,13 @@ jobs:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['19.10.0', '']
         profile_flags: [
-        'test',
+        'test_heterogeneoussirmodel',
+        'test_overdispersedseirmodel',
+        'test_overdispersedsirmodel',
+        'test_simpleseirdmodel',
+        'test_simplesirmodel',
+        'test_superspreadingseirmodel',
+        'test_superspreadingsirmodel'
         ]
     steps:
       - uses: actions/checkout@v2
