removing params from config file

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,11 +11,8 @@ params {
   // Workflow flags
   // TODO nf-core: Specify your pipeline's command line flags
   outdir = './results'
-  incubation_time = 5.5
-  recovery_time = 14
-  haar_full_mass = 7
-  population_csv=false
-  num_samples_csv=false
+  incubation_time=false
+  mortality_rate=false
   
   // Boilerplate options
   name = false
