tweaking test profils

--- a/conf/test_overdispersedseirmodel.config
+++ b/conf/test_overdispersedseirmodel.config
@@ -28,5 +28,6 @@ params {
   num_samples_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/num_samples.csv'
   model_type = "OverdispersedSEIRModel"
   recovery_time = 14
+  incubation_time = 5.5
   haar_full_mass = 7
 }
