--- a/conf/test_simpleseirdmodel.config
+++ b/conf/test_simpleseirdmodel.config
@@ -8,7 +8,7 @@
  */
 
 params {
-  config_profile_name = 'Test profile for SuperspreadingSEIRDModel'
+  config_profile_name = 'Test profile for SimpleSEIRDModel'
   config_profile_description = 'Minimal test dataset to check pipeline function'
   // Limit resources so that this can run on Travis
   max_cpus = 2
@@ -26,7 +26,7 @@ params {
   gisaid_sequences = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/sequences_subsampled.tsv'
   population_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/population.csv'
   num_samples_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/num_samples.csv'
-  model_type = "SuperspreadingSEIRDModel"
+  model_type = "SimpleSEIRDModel"
   incubation_time = 5.5
   recovery_time = 14
   haar_full_mass = 7
