new test data subsampled to MN and CA only

--- a/conf/test_simpleseirdmodel.config
+++ b/conf/test_simpleseirdmodel.config
@@ -23,7 +23,7 @@ params {
   'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/newicks/tree_minnesota.nwk'
   ]
   gisaid_metadata = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/metadata.tsv'
-  gisaid_sequences = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/sequences_subsampled.tsv'
+  gisaid_sequences = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/gisaid/sequences_subsampled_ca_mn_only.fasta'
   population_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/population.csv'
   num_samples_csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/epigen/testdata/epigen/num_samples.csv'
   model_type = "SimpleSEIRDModel"
