--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         'test_overdispersedsirmodel',
         'test_simpleseirdmodel',
         'test_simplesirmodel',
-        'test_superspreadingseirmodel',
+        #'test_superspreadingseirmodel',
         'test_superspreadingsirmodel'
         ]
     steps:
